Edit first blog

--- a/config.yml
+++ b/config.yml
@@ -5,7 +5,7 @@ enableEmoji: true
 
 params:
   homeInfoParams:
-    Title: We10om3 t0 Fa1c0ni4! 
+    Title: We1c0m3 t0 Fa1c0ni4! 
     Content: ...
 
   socialIcons: 
